# twitter-bot5

./: db.sqlite3  pyproject.toml  test.py  test1.py
admin/: models.py  resources.py  routes.py  start.py
admin/templates/: dashboard.html  proxy.html  upload_accounts.html
